--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,9 @@
+#
+# Copyright (c) 2017 Team X, CMPUT301, University of Alberta - All Rights Reserved.
+# You may use, distribute, or modify this code under terms and conditions of the Code of Student Behavior at University of Alberta.
+# You can find a copy of the license in this project. Otherwise please contact contact @abc.ca.
+#
+
 #Wed Sep 13 17:14:36 MDT 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
