--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
+/*
+ * Copyright (c) 2017 Team X, CMPUT301, University of Alberta - All Rights Reserved.
+ * You may use, distribute, or modify this code under terms and conditions of the Code of Student Behavior at University of Alberta.
+ * You can find a copy of the license in this project. Otherwise please contact contact @abc.ca.
+ */
+
 include ':app'
